# cppnn

./: .clang-format  .gitignore  CMakeLists.txt  README.md  data.txt  mnist_downloader.sh  report.md
.github/workflows/: build.yml
cmake/: config.cmake  matplot.cmake
examples/: CMakeLists.txt  deep.cpp  main.cpp  mnist.cpp  noise.cpp  noise_immunity.cpp  noised_mnist.cpp
src/: vis_noise_immunity.py  visualize_weight.py
src/cppnn/: assert.hpp  cppnn.hpp  csvcoder.hpp  layers.cpp  layers.hpp  matrix.hpp  mnist.cpp  mnist.hpp  model.cpp  model.hpp  model_result.hpp  plotter.hpp  random.hpp  util.hpp
tests/: CMakeLists.txt  layer_test.cpp  layer_time.cpp  matmul_performance.cpp  matrix.cpp  softmax.cpp
